Refactor: renovate frontend and backend architecture